--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 node_modules/
-.env
 keys/
-*.log
-.DS_Store
+.env
+key-base64.txt
+*.json
+!package.json
+!vercel.json
+encoded-key.txt
+encode-key.js
